State: Add initial subset of game state (#3)
We implement an initial subset of the game state and boilerplate for a
game manager class. We also sync the types across the backend and
frontend, and create the page `/example-game/` to proof-of-concept
loading the game state on the frontend.

The game state includes enums and initialization methods for a new game.
